--- a/nginx/502.html
+++ b/nginx/502.html
@@ -8,7 +8,7 @@
     body {
       background: url('https://images.unsplash.com/photo-1533749047139-189de3cf06d3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2439&q=80') no-repeat center center fixed;
       background-size: cover;
-      font-family: 'Arial', sans-serif;
+      font-family: 'Arial Nova', sans-serif;
       color: white;
     }
 
